# mdbook-tagger

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: frontmatter.rs  main.rs  tagger.rs
